# polychase

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  IMU_FORMAT_SUPPORT.md  MANUAL_DEPENDENCY_INSTALLATION.md  Makefile  README.md  TESTING.md  build_wheel.sh  check_pandas.py  check_scipy.py  check_scipy_blender.py  create_zip.py  create_zip.sh  generate_stubs.sh  install_pandas_blender.py  mypy.ini  pyproject.toml  pytest.ini  setup_testing.sh  test-results.md  vcpkg.json  verify_installation.py
blender_addon/: addon.py  blender_manifest.toml  core.py  imu_integration.py  keyframes.py  properties.py  requirements.txt
blender_addon/operators/: autodetect_pins.py  imu_loading.py  pin_distance.py  refiner.py  tracking.py
blender_addon/operators/pin_mode/: pin_mode.py  rendering.py
blender_addon/ui/: panels.py
cpp/: pin_mode.cc  pin_mode.h  polychase_pybind.cc  pose.h  pybind11_extension.h  refiner.cc  refiner.h  refiner_thread.h  tracker.cc  tracker.h  tracker_thread.h
cpp/pnp/: pnp_problem.h  quaternion.h  solvers.cc  solvers.h  types.h
docker/: Dockerfile.linux
tests/: README.md  __init__.py  conftest.py  data_generators.py  test_camm_detection.py  test_imu_integration.py  test_imu_property_based.py  test_imu_robustness.py  test_memory.py  test_performance.py
